styles.css
a:link {
  text-decoration: none;
  color: #fff;
}

a:visited {
  color: #fff;
}

body {
  background: #bdbad4;
  max-width: 1200px;
  margin: 0 auto;
}

footer {
  color: #fff;
  background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)),
    url("/pics/BTSgroup2.jpeg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

header {
  background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)),
    url("/pics/BTShearts.png");
  border-radius: 4px;
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  max-width: 700px;
  max-height: 800px;
  text-align: center;
  aspect-ratio: 1 / 1;
  margin: 0 auto;
}

ul {
  list-style-type: none;
  text-align: start;
  list-style-position: inside;
  margin: 0;
  padding: 0;
}

main {
  background-color: #fff;
}

p {
  text-align: start;
  font-family: roboto;
  font-size: 16px;
  font-style: normal;
  font-weight: 400;
  line-height: normal;
}

section {
  max-width: 1400px;
  margin: 0 auto;
  padding: 50px;
}

.card {
  display: block;
  margin: 0 auto;
}

.card-body {
  background-color: #fff;
  margin: 0 auto;
  margin-top: -20px;
  border-radius: 8px;
  padding: 8px;
  max-width: 100%;
  max-height: 100%;
}

.card-title {
  color: #000;
  font-size: 14px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 2px;
  text-transform: uppercase;
  width: 95px;
  background-color: rgb(194, 117, 235, 0.3);
  padding-left: 5px;
}

.card-title-three {
  color: #000;
  font-size: 14px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 2px;
  text-transform: uppercase;
  width: 118px;
  background-color: rgb(194, 117, 235, 0.3);
  padding-left: 5px;
}

.card-info-section {
  font: 6px;
  font-family: roboto;
  padding-bottom: 5px;
}

.lyric-info-section {
  font: 6px;
  font-family: roboto;
  padding-bottom: 5px;
}

.card-title-bottom-section {
  color: rgb(194, 117, 235);
  margin-top: 0;
}

.final-section {
  display: block;
  margin: 0 auto;
}

.final-title {
  margin: 0 auto;
  text-align: center;
  color: #000;
  font-size: 14px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 5px;
  text-transform: uppercase;
  padding-left: 5px;
}

.final-info-title {
  text-align: center;
  color: #000;
  font-size: 40px;
}

.final-grid {
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
  grid-gap: 0px;
}

.footer-link {
  color: rgb(212, 174, 233);
}

.footer-link:visited {
  color: rgb(212, 174, 233);
}

.footer-p {
  text-align: center;
  max-width: 100%;
}

.footer-titles {
  color: rgb(212, 174, 233);
}

.footer-title-two {
  font-size: 18px;
  color: rgb(212, 174, 233);
  text-align: center;
}

.grid-secondary {
  color: #000;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 30px;
}

.grid-3 {
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  grid-gap: 20px;
}

.grid-4 {
  margin: 0 auto;
  display: grid;
  grid-template-columns: 1fr 2fr 1fr;
  grid-gap: 20px;
}

.grid-footer {
  display: grid;
  grid-template-columns: 1fr 3fr 1fr;
  opacity: 0.6;
  line-height: 24px;
  grid-gap: 100px;
  padding-left: 100px;
}

.grid-main {
  display: grid;
  grid-template-columns: 1fr 1fr;
  grid-gap: 40px;
  padding: 0;
}

.header-two {
  font-family: Playfair display;
  color: #fff;
  font-size: 80px;
  margin-bottom: 1px;
}

.header-three {
  font-family: Roboto;
  color: #fff;
  margin-top: 1px;
  padding-bottom: 50px;
  margin-bottom: 150px;
}

.header-one {
  font-family: Roboto;
  color: #fff;
  margin-bottom: -45px;
  margin-top: 70px;
}

.hero {
  padding-top: 30px;
}

.info-three-title {
  text-align: center;
  color: #000;
  font-size: 40px;
}

.last-section-grid {
  margin: 0 auto;
  display: block;
  padding: 0;
}

.lyrics {
  color: #fff;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

.main-subtext {
  font-size: 13px;
  color: #462cb2;
  background-color: rgb(194, 117, 235, 0.3);
  width: 108px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 5px;
  text-transform: uppercase;
  padding-left: 5px;
  margin: 0;
}

.main-title {
  font-size: 48px;
  margin: 0;
}

.main-info {
  display: block;
  margin: 0 auto;
  margin-top: 100px;
  max-width: 1200px;
  padding: 5px;
}

.names {
  color: #000;
  font-size: 14px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 2px;
  text-transform: uppercase;
  margin-left: 60px;
}

.secondary {
  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
    url("/pics/btsbomb.webp");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  max-width: 100%;
  aspect-ratio: 1 / 1;
  margin: 0 auto;
}

.secondary-subtext {
  margin: 0 auto;
  text-align: center;
  color: #fff;
  font-size: 14px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 5px;
  text-transform: uppercase;
  width: 90px;
  background-color: rgb(194, 117, 235, 0.3);
  padding-left: 5px;
}

.subtext-3 {
  margin: 0 auto;
  text-align: center;
  color: #000;
  font-size: 14px;
  font-family: Poppins;
  font-style: normal;
  font-weight: 700;
  line-height: normal;
  letter-spacing: 5px;
  text-transform: uppercase;
  width: 150px;
  background-color: rgb(194, 117, 235, 0.3);
  padding-left: 5px;
  margin-top: 10px;
}

.secondary-info {
  text-align: center;
  color: #fff;
  font-size: 40px;
}

.video {
  display: flex;
  flex-wrap: wrap;
  width: 100%;
}

#card-btn {
  display: flex;
  margin: 0 auto;
  border-radius: 40px;
  justify-content: center;
  border: 1px solid #fff;
  padding: 16px 32px;
  background-color: rgb(194, 117, 235);
  color: #fff;
  cursor: pointer;
  max-width: 100px;
}

#card-btn:hover {
  cursor: pointer;
  box-shadow: 0 2px 2px 0 rgb(194, 117, 235), 0 2px 2px 0 rgb(194, 117, 235);
  transition: ease-in-out;
}

#info-btn {
  display: block;
  margin: 0;
  border-radius: 20px;
  border: 1px solid #fff;
  padding: 10px;
  background-color: rgb(194, 117, 235);
  color: #fff;
  cursor: pointer;
  max-width: 100px;
  text-align: center;
}

#info-btn:hover {
  cursor: pointer;
  box-shadow: 0 2px 2px 0 rgb(194, 117, 235), 0 2px 2px 0 rgb(194, 117, 235);
  transition: ease-in-out;
}

#hero-btn {
  border-radius: 20px;
  border: 1px solid #fff;
  padding: 8px;
  background-color: rgb(194, 117, 235);
  color: #fff;
}

#hero-btn:hover {
  cursor: pointer;
  box-shadow: 0 2px 2px 0 #fff, 0 4px 8px 0 #fff;
  transition: ease-in-out;
}

@media (max-width: 960px) {
  section {
    padding: 30px;
  }

  .footer-p {
    padding: 0;
    text-align: start;
  }

  .footer-title-two {
    text-align: start;
  }

  .grid-footer {
    grid-template-columns: 1fr;
    grid-gap: 20px;
  }

  .grid-main {
    grid-template-columns: 1fr;
    grid-gap: 32px;
    padding: 20px;
  }

  .header-two {
    font-size: 60px;
  }

  .header-three {
    font-size: 15px;
  }

  .header-one {
    font-size: 10px;
    margin-top: 100px;
  }

  .main-info {
    margin: 0 auto;
    max-width: 350px;
  }

  #hero-btn {
    padding: 5px;
    margin-top: 300px;
  }

  .img-responsive {
    max-width: 350px;
    max-height: 300px;
    margin: 0 auto;
    display: block;
  }

  .last-section-grid {
    margin: 0 auto;
    display: block;
    padding-left: 75px;
  }

  .grid-secondary {
    grid-template-columns: 1fr;
  }

  .grid-3 {
    grid-template-columns: 1fr;
    grid-gap: 20px;
    margin-bottom: 20px;
  }

  .grid-4 {
    margin: 0 auto;
    grid-template-columns: 1fr;
    grid-gap: 20px;
  }

  .final-grid {
    margin: 0 auto;
    grid-template-columns: 1fr;
    grid-gap: 20px;
  }

  .spotify {
    width: 300px;
  }
}

